syntax = "proto3";
option go_package = "/orderinfo";
package order;


import "google/protobuf/wrappers.proto";

service OrderManagement {
  rpc getOrder(google.protobuf.StringValue) returns (Order);//unary communication;

  rpc searchOrders(google.protobuf.StringValue) returns (stream Order); //streaming server side communication;

  rpc updateOrders(stream Order) returns (google.protobuf.StringValue); //streaming client side communication;
}
message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}



